[project]
name = "vivah-showrrom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "streamlit>=1.46.1",
]
